# summarize-video

./: .gitignore  .mcp.json  CLAUDE.md  README.md  marketplace.json
.claude-plugin/: marketplace.json  plugin.json
docs/: adding-tools.md  architecture.md
servers/: launcher.py  pyproject.toml  video_http_server.py
servers/tools/: __init__.py  video_check.py  video_start.py
skills/summarize-video/: SKILL.md
skills/transcribe-video/: SKILL.md
tests/: conftest.py  test_video_check.py  test_video_start.py
