[project]
name = "summarize-video-servers"
version = "1.1.0"
description = "MCP launcher and HTTP server for summarize-video plugin"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
    "requests>=2.32.0",
    "flask>=3.0.0",
    "yt-dlp>=2024.1.0",
    "faster-whisper>=1.0.0",
    "imageio-ffmpeg>=0.5.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
